ADD: Audit Log search & result

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -135,7 +135,7 @@
                                                 <a th:href="@{/e-Services-2/maintenance/accessControl.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.accesscontrol')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a th:href="@{/eservices2/auditLog.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.auditlog')}"></a>
+                                                <a th:href="@{/e-Services-2/maintenance/auditLog.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.auditlog')}"></a>
                                             </li>
                                             <li class="func-child">
                                                 <a th:href="@{/e-Services-2/maintenance/scheduleJob.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.schedulejob')}"></a>
