--- a/src/main/resources/templates/eServices2/AuditLog/audit-log-search.html
+++ b/src/main/resources/templates/eServices2/AuditLog/audit-log-search.html
@@ -4,83 +4,188 @@
     <meta charset="UTF-8"></meta>
     <title>e-Services Admin Function</title>
 
-    <script type="text/javascript" th:inline="javascript" th:if="${auditLogDTO}">
+    <link rel="stylesheet" href="/adminfunc/css/audit-log.css"/>
+
+    <script th:inline="javascript" th:if="${funcDTO}">
         /*<![CDATA[*/
 
         $(document).ready(function () {
-            var list = [];
+            var funcDTO = [[${funcDTO}]];
+            console.log('funcDTO');
+            console.log(funcDTO);
 
-            var auditLogList = [[${auditLogDTO.auditLogList}]];
 
-            let COLUMN_1 = "User ID";
-            let COLUMN_2 = "Function Name"
-            let COLUMN_3 = "[Action]Field Name"
-            let COLUMN_4 = "Input(Old/New)"
-            let COLUMN_5 = "Result"
-            let COLUMN_6 = "Date"
-            let COLUMN_7 = "Time"
-            
-            if (isNotEmptyNullUndfined(auditLogList) && auditLogList.length) {
-                jQuery.each(auditLogList, function (index, auditLog) {
-                    var newObj = {};
-                    newObj[COLUMN_1] = auditLog.userId;
-                    newObj[COLUMN_2] = (auditLog.funcId?auditLog.funcId:"");
-                    newObj[COLUMN_3] = (auditLog.type?"[" + auditLog.type +"]":"") + (auditLog.fieldName?auditLog.fieldName:"")  ;
-                    newObj[COLUMN_4] = (auditLog.value?auditLog.value:(auditLog.valueOld?"("+auditLog.valueOld + "/"+ auditLog.valueNew+")":""));
-                    newObj[COLUMN_5] = (auditLog.searchResult?"Hit":"");
-                    newObj[COLUMN_6] = moment(auditLog.logDatetime).format('DD/MM/YYYY');
-                    newObj[COLUMN_7] = moment(auditLog.logDatetime).format('HH:mm:ss');
+            if (isNotEmptyNullUndfined(funcDTO)) {
+                var tmpFuncList = funcDTO['funcList'];
+                // var jobStatusList = auditLogDTO['statusList'];
 
-                    list.push(newObj);
-                });
+
+                if (isNotEmptyNullUndfined(tmpFuncList) && tmpFuncList.length > 0) {
+                    var jobListDom =jQuery('#funcList');
+
+                    var list = [];
+                    jQuery.each(tmpFuncList, function (index, object) {
+                        var funcName = object['funcDesc'];
+                        var funcId = object['funcId'];
+
+                        var newObj = {
+                            'funcName': funcName,
+                            'funcId': funcId
+                        };
+
+                        list.push(newObj);
+                    });
+                    // generateSelectOptionByValue(jobListDom, list, false);
+
+                    //
+                    var elementStr = '';
+                    for(var i=0; i < list.length; i++) {
+                        var tmpSelectStr = '';
+                        var obj = list[i];
+
+                        var tmpVal = obj['funcId'];
+                        var tmpName = obj['funcName'];
+
+                        if (i === 0 ) {
+                            tmpSelectStr = ' selected="selected" ';
+                        }
+
+                        elementStr += '<option value="' + tmpVal + '" ' + tmpSelectStr + '>' + tmpName + '</option>';
+                    }
+                    jobListDom.html(elementStr);
+
+
+                }
+
+                /*
+                if (isNotEmptyNullUndfined(jobStatusList) && jobStatusList.length > 0) {
+                    var statusListDom =jQuery('#statusList');
+
+                    var list = [];
+                    jQuery.each(jobStatusList, function (index, object) {
+                        var name = object['name'];
+
+                        list.push(name);
+                    });
+                    generateSelectOptionByValue(statusListDom, list, true);
+                }
+
+                */
             }
 
-            let grid = $("#auditLogGrid");
-            // console.log(grid);
+            var submitBtnDom = jQuery('#submitBtn');
+            submitBtnDom.on('click', function () {
+                var form =jQuery('#submitForm');
 
-            grid.jsGrid(
-                    {
-                        width: '100%',
-                        height: '100%',
-
-                        sorting: true,
-                        noDataContent: 'NO data',
-                        selecting: false,
-
-                        data: list,
-
-                        fields: [
-                            { name: COLUMN_1, type: 'text', width: 60, headerTemplate: commonHeader },
-                            { name: COLUMN_2, type: 'text', width: 60, headerTemplate: commonHeader },
-                            { name: COLUMN_3, type: 'text', width: 40, headerTemplate: commonHeader },
-                            { name: COLUMN_4, type: 'text', width: 50, headerTemplate: commonHeader },
-                            { name: COLUMN_5, type: 'text', width: 40, headerTemplate: commonHeader },
-                            { name: COLUMN_6, type: 'text', width: 40, headerTemplate: commonHeader },
-                            { name: COLUMN_7, type: 'text', width: 20, headerTemplate: commonHeader },
-
-                        ]
-
-                    }
-            )
-
+                form.submit();
+            });
 
         });
 
         /*]]>*/
     </script>
 
+    <!--<script>-->
+
+    <!--jQuery(function(){-->
+    <!--$("#auditLog").on("submit", function(e){-->
+    <!--if ($(".forStartDate").val() == '')-->
+    <!--$(".startDate").prop('disabled', true);-->
+    <!--else-->
+    <!--$(".startDate").prop('disabled', false);-->
+    <!--//                    $(".startDate").val(moment($(this).val(), UI_DATE_FORMAT).format(UI_DATE_FORMAT));-->
+    <!--$(".startDate").val($(".forStartDate").val());-->
+
+    <!--if ($(".forEndDate").val() == '')-->
+    <!--$(".endDate").prop('disabled', true);-->
+    <!--else-->
+    <!--$(".endDate").prop('disabled', false);-->
+
+    <!--$(".endDate").val($(".forEndDate").val());-->
+    <!--})-->
+    <!--})-->
+    <!--</script>-->
+
 </head>
 <body>
 <div>
-
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content">
-        <div class="content-padding">
-            <div style=" margin-top: 1.5em; width: 100%; height: 200px; ">
-                <div id="auditLogGrid"></div>
+
+
+            <div class="content-padding">
+
+                <div>
+                    <form id="submitForm" th:action="@{/e-Services-2/maintenance/auditLog_Result.do}" method="post" >
+                        <div>
+                            <b><span th:text="${#messages.msg('umps.adminfunc.common.searchCriteria')}"></span></b>
+                        </div>
+                        <div >
+                            <div class="RowSeparatorThin"></div>
+                            <div class="flex-container search-padding">
+                                <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.funcName')}"></span></b></div>
+                                <div class="flex-item-7">
+                                    <select id="funcList" name="funcId" ></select>
+                                </div>
+                            </div>
+                            <div class="flex-container search-padding">
+                                <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.userId')}"></span></b></div>
+                                <div class="flex-item-7">
+                                    <input class="search-input-time" id="userId" name="userId" type="text" maxlength="10" size="10"  />
+                                </div>
+                            </div>
+
+
+                            <div class="flex-container search-padding">
+                                <div class="flex-item-2 search-field-left">
+                                    <!--<input type="radio" name="time" />-->
+                                    <b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.startDate')}"></span></b>
+                                </div>
+                                <div class="flex-item-7">
+                                    <!--<input type="hidden" id="startDate" name="startDate" />-->
+                                    <input class="search-input-time" id="startTime" name="startTime" type="text" maxlength="10" size="10"  />
+                                    <span class="search-time-padding">(dd/mm/yyyy)</span>
+                                    <input class="search-input-minute" id="startHour" name="startHour" type="text" maxlength="2" size="2" />
+                                    <span> : </span>
+                                    <input class="search-input-minute" id="startMin" name="startMinute" type="text" maxlength="2" size="2"  />
+                                    <span>(hh:mm)</span>
+                                </div>
+                            </div>
+                            <div class="flex-container search-padding">
+                                <div class="flex-item-2 search-field-left">
+                                    <!--<input type="radio" name="time" />-->
+                                    <b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.endDate')}"></span></b>
+                                </div>
+                                <div class="flex-item-7">
+                                    <!--<input type="hidden" id="endDate" name="endDate" />-->
+                                    <input class="search-input-time" id="endTime" name="endTime" type="text" maxlength="10" size="10"  />
+                                    <span class="search-time-padding">(dd/mm/yyyy)</span>
+                                    <input class="search-input-minute" id="endHour" name="endHour" type="text" maxlength="2" size="2" />
+                                    <span> : </span>
+                                    <input class="search-input-minute" id="endMin" name="endMinute" type="text" maxlength="2" size="2"  />
+                                    <span>(hh:mm)</span>
+                                </div>
+                            </div>
+
+                            <div class="RowSeparatorThin"></div>
+                        </div>
+                        <div class="flex-container" style="padding-top: 30px;">
+                            <div style="flex: auto;"></div>
+                            <div style="padding: 15px;">
+                                <!--<a th:href="@{/e-Services-2/maintenance/auditLog_Result.do}">-->
+                                <!--<input class="SmallButtonStyle pointer" style="min-width: 80px;" type="submit" th:value="${#messages.msg('umps.adminfunc.common.search')}" />-->
+                                <!--</a>-->
+
+                                <input class="SmallButtonStyle pointer" id="submitBtn" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.search')}" />
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+
             </div>
-        </div>
+
     </div>
 
 
