ADD: Create function group, Update function group, Delete function group

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -145,13 +145,13 @@
                                     <div id="sub-content-1-3">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.createfuncgroup')}"></a>
+                                                <a th:href="@{/e-Services-2/management/createFunctionGroup.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.createfuncgroup')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.updatefuncgroup')}"></a>
+                                                <a th:href="@{/e-Services-2/management/updateFunctionGroup.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.updatefuncgroup')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.deletefuncgroup')}"></a>
+                                                <a th:href="@{/e-Services-2/management/deleteFunctionGroup.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.deletefuncgroup')}"></a>
                                             </li>
                                         </ul>
                                     </div>
