ADD: Appointment Booking Enquiry, Smartics2 & RM Online Submission Enquiry

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -178,10 +178,10 @@
                                     <div id="sub-content-2-1">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.enquiry.appointmentbookingenquiry')}"></a>
+                                                <a th:href="@{/SMARTICS-2/enquiry/appointmentBookingEnquiry.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.enquiry.appointmentbookingenquiry')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.enquiry.onlinesubmissionenquiry')}"></a>
+                                                <a th:href="@{/SMARTICS-2/enquiry/onlineSubmissionEnquiry.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.enquiry.onlinesubmissionenquiry')}"></a>
                                             </li>
                                             <li class="func-child">
                                                 <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.enquiry.enquirycode')}"></a>
@@ -215,7 +215,7 @@
                                     <div id="sub-content-3-1">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.rm.enquiry.onlinesubmissionenquiry')}"></a>
+                                                <a th:href="@{/RM/enquiry/onlineSubmissionEnquiry.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.rm.enquiry.onlinesubmissionenquiry')}"></a>
                                             </li>
                                         </ul>
                                     </div>
