--- a/src/main/resources/templates/Smartics2/AppointmentBookingEnquiry/appointment-booking-enquiry-search.html
+++ b/src/main/resources/templates/Smartics2/AppointmentBookingEnquiry/appointment-booking-enquiry-search.html
@@ -71,9 +71,9 @@
                         <div class="flex-container" >
                             <div style="flex: auto;"></div>
                             <div style="padding: 15px;">
-                                <!--<a th:href="@{/SMARTICS-2/enquiry/deleteFunctionGroup_Result.do}">-->
+                                <a th:href="@{/SMARTICS-2/enquiry/appointmentBookingEnquiry_OfficeResult.do}">
                                 <input class="SmallButtonStyle pointer" id="" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.search')}" />
-                                <!--</a>-->
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -100,9 +100,9 @@
                         <div class="flex-container" >
                             <div style="flex: auto;"></div>
                             <div style="padding: 15px;">
-                                <!--<a th:href="@{/SMARTICS-2/enquiry/deleteFunctionGroup_Result.do}">-->
+                                <a th:href="@{/SMARTICS-2/enquiry/appointmentBookingEnquiry_ApplicantResult.do}">
                                 <input class="SmallButtonStyle pointer" id="" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.search')}" />
-                                <!--</a>-->
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -142,9 +142,9 @@
                         <div class="flex-container" >
                             <div style="flex: auto;"></div>
                             <div style="padding: 15px;">
-                                <!--<a th:href="@{/SMARTICS-2/enquiry/deleteFunctionGroup_Result.do}">-->
+                                <a th:href="@{/SMARTICS-2/enquiry/appointmentBookingEnquiry_AppointmentResult.do}">
                                 <input class="SmallButtonStyle pointer" id="" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.search')}" />
-                                <!--</a>-->
+                                </a>
                             </div>
                         </div>
                     </div>
