--- a/src/main/resources/templates/Smartics2/AppointmentBookingEnquiry/appointment-booking-enquiry-by-appointment-result.html
+++ b/src/main/resources/templates/Smartics2/AppointmentBookingEnquiry/appointment-booking-enquiry-by-appointment-result.html
@@ -22,6 +22,85 @@
     <!--/*]]>*/-->
     <!--</script>-->
 
+    <script>
+        $(document).ready(function () {
+            var list = [];
+
+            list = [
+                {
+                    'office': 'ROP-HKO',
+                    'maxCapacity': '140',
+                    'quotaReleasedBooking': '135',
+                    'transferredQuota': '0',
+                    'usedQuota': '100',
+                    'remainedQuota': '30',
+                    'validAppointment': '100',
+                    'quotaAvailWalkIn': '10'
+                },
+                {
+                    'office': 'ROP-HKO',
+                    'maxCapacity': '140',
+                    'quotaReleasedBooking': '135',
+                    'transferredQuota': '0',
+                    'usedQuota': '100',
+                    'remainedQuota': '30',
+                    'validAppointment': '100',
+                    'quotaAvailWalkIn': '10'
+                },
+                {
+                    'office': 'ROP-HKO',
+                    'maxCapacity': '140',
+                    'quotaReleasedBooking': '135',
+                    'transferredQuota': '0',
+                    'usedQuota': '100',
+                    'remainedQuota': '30',
+                    'validAppointment': '100',
+                    'quotaAvailWalkIn': '10'
+                }
+            ];
+
+            var grid = $("#dataGrid");
+            var gridConfig = {
+                width: '100%',
+                height: '260px',
+
+                sorting: true,
+                noDataContent: 'NO data',
+                selecting: false,
+
+                autoload: true,
+
+                // paging: true,
+                // pageLoading: true,
+                // pageSize: recordPerPage,
+
+                data: list,
+
+                // controller: {
+                //     loadData: function (filter) {
+                //         var startIndex = (filter.pageIndex - 1) * filter.pageSize;
+                //         return {
+                //             data: list.slice(startIndex, startIndex + filter.pageSize),
+                //             itemCount: list.length
+                //         };
+                //     }
+                // },
+
+                fields: [
+                    { name: 'office', title: 'Office', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'maxCapacity', title: 'Maximum Capacity', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'quotaReleasedBooking', title: 'Quota Released for Booking', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'transferredQuota', title: 'Transferred Quota', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'usedQuota', title: 'Used Quota', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'remainedQuota', title: 'Remained Quota', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'validAppointment', title: 'Valid Appointment', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'quotaAvailWalkIn', title: 'Quota Available for Walk-in', type: 'text', width: 10, headerTemplate: commonHeader }
+                ]
+            };
+            grid.jsGrid(gridConfig);
+        });
+    </script>
+
 </head>
 <body>
 <div>
@@ -31,14 +110,65 @@
     <div layout:fragment="content">
         <div class="content-padding">
             <div>
-                <h3>appointmentBookAppointmentResult</h3>
+                <div>
+                    <div class="flex-container">
+                        <div class="flex-item-1">
+                            <b><span th:text="${#messages.msg('umps.adminfunc.common.searchResult')}"></span></b>
+                        </div>
+                        <div class="flex-item-auto">
+                            <input class="SmallButtonStyle pointer" id="" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.printThisPage')}" />
+                        </div>
+                    </div>
+                    <div>
+                        <div class="RowSeparatorThin"></div>
+                        <div class="flex-container">
+                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.AppointmentType')}"></span></b></div>
+                            <div class="flex-item-7 search-result-right">
+                                <span id="">[ROPbooking] ROP Appointment Booking  Form Pre-fill</span>
+                            </div>
+                        </div>
+                        <div class="RowSeparatorThin"></div>
+                        <div class="flex-container">
+                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.date')}"></span></b></div>
+                            <div class="flex-item-7 search-result-right">
+                                <span id="">01/12/2017 to 01/12/2017</span>
+                            </div>
+                        </div>
+                        <!--<div class="RowSeparatorThin"></div>-->
+
+
+                        <div class="RowSeparator"></div>
+                    </div>
+                </div>
+
+                <div style="margin-top: 1em;  ">
+                    <!--<div class="flex-container grid-page-header">-->
+                        <!--<div style="flex: auto;"></div>-->
+                        <!--<div>-->
+                            <!--<span class="grid-page-header-text" th:text="${#messages.msg('umps.adminfunc.common.pagination.recordPerPage')}"></span>-->
+                            <!--<span>-->
+                                <!--<select id="totalPager"></select>-->
+                            <!--</span>-->
+                            <!--<span class="grid-page-header-text" style="padding-left: 10px;" th:text="${#messages.msg('umps.adminfunc.common.pagination.pageNo')}"></span>-->
+                            <!--<span>-->
+                                <!--<select id="numPager"></select>-->
+                            <!--</span>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                    <div class="grid-page-header grid-page-header-text" style="width: 200px; text-align: center;">
+                        <span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.details')}"></span>
+                    </div>
+                    <div>
+                        <div id="dataGrid"></div>
+                    </div>
+                </div>
 
                 <div class="flex-container" style="padding-top: 30px;">
                     <div style="flex: auto;"></div>
-                    <div style="padding: 15px;">
-                        <!--<a th:href="@{/SMARTICS-2/enquiry/deleteFunctionGroup_Result.do}">-->
-                        <input class="SmallButtonStyle pointer" id="submitBtn" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.search')}" />
-                        <!--</a>-->
+                    <div>
+                        <a th:href="@{/SMARTICS-2/enquiry/appointmentBookingEnquiry.do}">
+                            <input class="SmallButtonStyle pointer" id="" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.backToSearchCriteria')}" />
+                        </a>
                     </div>
                 </div>
             </div>
