--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -140,6 +140,9 @@
                                             <li class="func-child">
                                                 <a th:href="@{/e-Services-2/maintenance/scheduleJob.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.schedulejob')}"></a>
                                             </li>
+                                            <li class="func-child">
+                                                <a th:href="@{/e-Services-2/maintenance/ivrs.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.ivrs')}"></a>
+                                            </li>
                                         </ul>
                                     </div>
                                     <div id="sub-content-1-3">
