--- a/src/main/resources/templates/Smartics2/AppointmentBookingEnquiry/appointment-booking-enquiry-by-applicant-detail.html
+++ b/src/main/resources/templates/Smartics2/AppointmentBookingEnquiry/appointment-booking-enquiry-by-applicant-detail.html
@@ -22,6 +22,149 @@
     <!--/*]]>*/-->
     <!--</script>-->
 
+    <script>
+        $(document).ready(function () {
+            var detailList = [];
+            var historyList = [];
+
+            detailList = [
+                {
+                    'appDateTime': '01-12-2017',
+                    'appOffice': 'ROP-HKO',
+                    'applicantID': 'A123456',
+                    'dob': '01-12-1999',
+                    'group': '1',
+                    'txDateTime': '21-11-2017 17:12:43',
+                    'trn': '5791711306000005',
+                    'channel': 'W',
+                    'status': 'Valid'
+                }
+            ];
+
+            historyList = [
+                {
+                    'appDateTime': '01-12-2017',
+                    'appOffice': 'ROP-HKO',
+                    'applicantID': 'A123456',
+                    'dob': '01-12-1999',
+                    'group': '1',
+                    'txDateTime': '21-11-2017 17:12:43',
+                    'trn': '5791711306000005',
+                    'channel': 'W',
+                    'action': 'Make'
+                }
+            ];
+
+            //
+            var detailGrid = $("#detailGrid");
+            var detailGridConfig = {
+                width: '100%',
+                height: '260px',
+
+                sorting: true,
+                noDataContent: 'NO data',
+                selecting: false,
+
+                autoload: true,
+
+                // paging: true,
+                // pageLoading: true,
+                // pageSize: recordPerPage,
+
+                data: detailList,
+
+                // controller: {
+                //     loadData: function (filter) {
+                //         var startIndex = (filter.pageIndex - 1) * filter.pageSize;
+                //         return {
+                //             data: list.slice(startIndex, startIndex + filter.pageSize),
+                //             itemCount: list.length
+                //         };
+                //     }
+                // },
+
+                fields: [
+                    { name: 'appDateTime', title: 'App Date Time', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'appOffice', title: 'App Office', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'applicantID', title: 'Applicant ID/ARN', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'dob', title: 'DOB', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'group', title: 'Group', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'txDateTime', title: 'Tx Date Time', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'trn', title: 'TRN', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'channel', title: 'Channel', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'status', title: 'Status', type: 'text', width: 10, headerTemplate: commonHeader },
+                    {type: 'control', width: 10, headerTemplate: function () {
+                            var title = '<span>History</span>';
+                            return title;
+                        }, itemTemplate: function (value, item) {
+                            var result = jsGrid.fields.control.prototype.itemTemplate.apply(this, arguments);
+
+                            var str = '';
+
+                            // href="http://localhost:8080/adminfunc/SMARTICS-2/enquiry/appointmentBookingEnquiry_ApplicantDetail.do"
+
+                            str += '<span>';
+                            str += '<a class="RedLink pointer" >';
+                            str += 'View';
+                            str += '</a>';
+                            str += '</span>';
+
+                            result = str;
+
+                            return result;
+                        }}
+                ]
+            };
+            detailGrid.jsGrid(detailGridConfig);
+
+
+            //
+            var historyGrid = $("#historyGrid");
+            var historyGridConfig = {
+                width: '100%',
+                height: '260px',
+
+                sorting: true,
+                noDataContent: 'NO data',
+                selecting: false,
+
+                autoload: true,
+
+                // paging: true,
+                // pageLoading: true,
+                // pageSize: recordPerPage,
+
+                data: historyList,
+
+                // controller: {
+                //     loadData: function (filter) {
+                //         var startIndex = (filter.pageIndex - 1) * filter.pageSize;
+                //         return {
+                //             data: list.slice(startIndex, startIndex + filter.pageSize),
+                //             itemCount: list.length
+                //         };
+                //     }
+                // },
+
+                fields: [
+                    { name: 'appDateTime', title: 'App Date Time', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'appOffice', title: 'App Office', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'applicantID', title: 'Applicant ID/ARN', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'dob', title: 'DOB', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'group', title: 'Group', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'txDateTime', title: 'Tx Date Time', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'trn', title: 'TRN', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'channel', title: 'Channel', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'action', title: 'Action', type: 'text', width: 10, headerTemplate: commonHeader }
+                ]
+            };
+            historyGrid.jsGrid(historyGridConfig);
+
+
+
+        });
+    </script>
+
 </head>
 <body>
 <div>
@@ -43,23 +186,23 @@
                     <div>
                         <div class="RowSeparatorThin"></div>
                         <div class="flex-container">
-                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.office')}"></span></b></div>
+                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.applicantID')}"></span></b></div>
                             <div class="flex-item-7 search-result-right">
-                                <span id="">Registration of Persons - Hong Kong Office</span>
+                                <span id=""></span>
+                            </div>
+                        </div>
+                        <div class="RowSeparatorThin"></div>
+                        <div class="flex-container">
+                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.trn')}"></span></b></div>
+                            <div class="flex-item-7 search-result-right">
+                                <span id="">5791711306000005</span>
                             </div>
                         </div>
                         <div class="RowSeparatorThin"></div>
                         <div class="flex-container">
                             <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.AppointmentType')}"></span></b></div>
                             <div class="flex-item-7 search-result-right">
-                                <span id="">[ROPbooking] ROP Appointment Booking  Form Pre-fill</span>
-                            </div>
-                        </div>
-                        <div class="RowSeparatorThin"></div>
-                        <div class="flex-container">
-                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.date')}"></span></b></div>
-                            <div class="flex-item-7 search-result-right">
-                                <span id="startDate">01/12/2017</span>
+                                <span id="startDate">[ROPbooking] ROP Appointment Booking  Form Pre-fill</span>
                             </div>
                         </div>
                         <!--<div class="RowSeparatorThin"></div>-->
@@ -69,22 +212,23 @@
                     </div>
                 </div>
 
-                <div style="margin-top: 1em;  ">
-                    <!--<div class="flex-container grid-page-header">-->
-                    <!--<div style="flex: auto;"></div>-->
-                    <!--<div>-->
-                    <!--<span class="grid-page-header-text" th:text="${#messages.msg('umps.adminfunc.common.pagination.recordPerPage')}"></span>-->
-                    <!--<span>-->
-                    <!--<select id="totalPager"></select>-->
-                    <!--</span>-->
-                    <!--<span class="grid-page-header-text" style="padding-left: 10px;" th:text="${#messages.msg('umps.adminfunc.common.pagination.pageNo')}"></span>-->
-                    <!--<span>-->
-                    <!--<select id="numPager"></select>-->
-                    <!--</span>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <div>
-                        <div id="dataGrid"></div>
+                <div>
+                    <div style="margin-top: 1em;  ">
+                        <div class="grid-page-header grid-page-header-text" style="width: 200px; text-align: center;">
+                            <span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.details')}"></span>
+                        </div>
+                        <div>
+                            <div id="detailGrid"></div>
+                        </div>
+                    </div>
+
+                    <div style="margin-top: 1em;  ">
+                        <div class="grid-page-header grid-page-header-text" style="width: 200px; text-align: center;">
+                            <span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.history')}"></span>
+                        </div>
+                        <div>
+                            <div id="historyGrid"></div>
+                        </div>
                     </div>
                 </div>
 
@@ -96,7 +240,7 @@
                         </a>
                     </div>
                     <div style="padding-left: 10px;">
-                        <a th:href="@{/SMARTICS-2/enquiry/appointmentBookingEnquiry.do}">
+                        <a th:href="@{/SMARTICS-2/enquiry/appointmentBookingEnquiry_ApplicantResult.do}">
                             <input class="SmallButtonStyle pointer" id="" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.backToPreviousPage')}" />
                         </a>
                     </div>
