ADD: Enquiry Code Information MOD: Appointment Booking Enquiry data grid footer

--- a/src/main/resources/templates/Smartics2/AppointmentBookingEnquiry/appointment-booking-enquiry-by-appointment-result.html
+++ b/src/main/resources/templates/Smartics2/AppointmentBookingEnquiry/appointment-booking-enquiry-by-appointment-result.html
@@ -161,6 +161,7 @@
                     <div>
                         <div id="dataGrid"></div>
                     </div>
+                    <div class="grid-page-header" style="height: 30px;">&nbsp;</div>
                 </div>
 
                 <div class="flex-container" style="padding-top: 30px;">
