--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -187,7 +187,7 @@
                                                 <a th:href="@{/SMARTICS-2/enquiry/onlineSubmissionEnquiry.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.enquiry.onlinesubmissionenquiry')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.enquiry.enquirycode')}"></a>
+                                                <a th:href="@{/SMARTICS-2/enquiry/enquiryCodeInformation.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.enquiry.enquirycode')}"></a>
                                             </li>
                                         </ul>
                                     </div>
