--- a/src/main/resources/templates/Smartics2/AppointmentBookingEnquiry/appointment-booking-enquiry-by-applicant-detail.html
+++ b/src/main/resources/templates/Smartics2/AppointmentBookingEnquiry/appointment-booking-enquiry-by-applicant-detail.html
@@ -220,6 +220,7 @@
                         <div>
                             <div id="detailGrid"></div>
                         </div>
+                        <div class="grid-page-header" style="height: 30px;">&nbsp;</div>
                     </div>
 
                     <div style="margin-top: 1em;  ">
@@ -229,6 +230,7 @@
                         <div>
                             <div id="historyGrid"></div>
                         </div>
+                        <div class="grid-page-header" style="height: 30px;">&nbsp;</div>
                     </div>
                 </div>
 
