--- a/src/main/resources/templates/Smartics2/EnquiryCodeInformation/enquiry-code-info-result.html
+++ b/src/main/resources/templates/Smartics2/EnquiryCodeInformation/enquiry-code-info-result.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"></meta>
     <title>e-Services Admin Function</title>
 
-    <link rel="stylesheet" href="/adminfunc/css/func-group.css"/>
+    <link rel="stylesheet" href="/adminfunc/css/enquiry-code.css"/>
 
     <!--<script th:inline="javascript" th:if="${scheduleJobDetailDTO}">-->
     <!--/*<![CDATA[*/-->
@@ -28,12 +28,16 @@
 
             list = [
                 {
-                    'time': '0645',
-                    'applicantID': 'A123456(G)',
-                    'maxCapacity': '0',
-                    'quotaReleasedBooking': '0',
-                    'usedQuota': '0',
-                    'remainedQuota': '0'
+                    'txDateTime': '30-11-2017 14:24:43',
+                    'appType': 'ROPbooking',
+                    'appDateTime': '30-11-2017 14:24:43',
+                    'appointmentOffice': 'ROP-HKO',
+                    'applicantID': 'A123456',
+                    'dob': '',
+                    'trn': '5791711306000005',
+                    'channel': 'W',
+                    'status': 'Valid',
+                    'enquiryCode': '1111'
                 }
             ];
 
@@ -65,12 +69,16 @@
                 // },
 
                 fields: [
-                    { name: 'time', title: 'Time', type: 'text', width: 20, headerTemplate: commonHeader },
-                    { name: 'applicantID', title: 'Applicant ID (\'G\' denotes Group Booking)', type: 'text', width: 20, headerTemplate: commonHeader },
-                    { name: 'maxCapacity', title: 'Maximum Capacity', type: 'text', width: 10, headerTemplate: commonHeader },
-                    { name: 'quotaReleasedBooking', title: 'Quota Released for Booking', type: 'text', width: 10, headerTemplate: commonHeader },
-                    { name: 'usedQuota', title: 'Used Quota', type: 'text', width: 10, headerTemplate: commonHeader },
-                    { name: 'remainedQuota', title: 'Remained Quota', type: 'text', width: 10, headerTemplate: commonHeader }
+                    { name: 'txDateTime', title: 'Tx Date Time', type: 'text', width: 20, headerTemplate: commonHeader },
+                    { name: 'appType', title: 'App Type', type: 'text', width: 20, headerTemplate: commonHeader },
+                    { name: 'appDateTime', title: 'App Date Time', type: 'text', width: 20, headerTemplate: commonHeader },
+                    { name: 'appointmentOffice', title: 'Appointment Office', type: 'text', width: 20, headerTemplate: commonHeader },
+                    { name: 'applicantID', title: 'Applicant ID', type: 'text', width: 20, headerTemplate: commonHeader },
+                    { name: 'dob', title: 'DOB', type: 'text', width: 20, headerTemplate: commonHeader },
+                    { name: 'trn', title: 'TRN', type: 'text', width: 30, headerTemplate: commonHeader },
+                    { name: 'channel', title: 'Channel', type: 'text', width: 20, headerTemplate: commonHeader },
+                    { name: 'status', title: 'Status', type: 'text', width: 10, headerTemplate: commonHeader },
+                    { name: 'enquiryCode', title: 'Enquiry Code', type: 'text', width: 20, headerTemplate: commonHeader }
                 ]
             };
             grid.jsGrid(gridConfig);
@@ -92,29 +100,36 @@
                             <b><span th:text="${#messages.msg('umps.adminfunc.common.searchResult')}"></span></b>
                         </div>
                         <div class="flex-item-auto">
-                            <input class="SmallButtonStyle pointer" id="" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.printThisPage')}" />
+                            <!--<input class="SmallButtonStyle pointer" id="" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.printThisPage')}" />-->
                         </div>
                     </div>
                     <div>
                         <div class="RowSeparatorThin"></div>
                         <div class="flex-container">
-                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.office')}"></span></b></div>
+                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.enquiryCodeInfo.hkic')}"></span></b></div>
                             <div class="flex-item-7 search-result-right">
-                                <span id="">Registration of Persons - Hong Kong Office</span>
+                                <span id="">a123456</span>
                             </div>
                         </div>
                         <div class="RowSeparatorThin"></div>
                         <div class="flex-container">
-                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.AppointmentType')}"></span></b></div>
+                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.enquiryCodeInfo.tdNo')}"></span></b></div>
+                            <div class="flex-item-7 search-result-right">
+                                <span id=""></span>
+                            </div>
+                        </div>
+                        <div class="RowSeparatorThin"></div>
+                        <div class="flex-container">
+                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.enquiryCodeInfo.dob')}"></span></b></div>
+                            <div class="flex-item-7 search-result-right">
+                                <span id=""></span>
+                            </div>
+                        </div>
+                        <div class="RowSeparatorThin"></div>
+                        <div class="flex-container">
+                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.enquiryCodeInfo.appointmentType')}"></span></b></div>
                             <div class="flex-item-7 search-result-right">
                                 <span id="">[ROPbooking] ROP Appointment Booking  Form Pre-fill</span>
-                            </div>
-                        </div>
-                        <div class="RowSeparatorThin"></div>
-                        <div class="flex-container">
-                            <div class="flex-item-2 search-result-left"><b><span th:text="${#messages.msg('umps.adminfunc.appointmentEnquiry.date')}"></span></b></div>
-                            <div class="flex-item-7 search-result-right">
-                                <span id="startDate">01/12/2017</span>
                             </div>
                         </div>
                         <!--<div class="RowSeparatorThin"></div>-->
@@ -126,17 +141,17 @@
 
                 <div style="margin-top: 1em;  ">
                     <!--<div class="flex-container grid-page-header">-->
-                        <!--<div style="flex: auto;"></div>-->
-                        <!--<div>-->
-                            <!--<span class="grid-page-header-text" th:text="${#messages.msg('umps.adminfunc.common.pagination.recordPerPage')}"></span>-->
-                            <!--<span>-->
-                                <!--<select id="totalPager"></select>-->
-                            <!--</span>-->
-                            <!--<span class="grid-page-header-text" style="padding-left: 10px;" th:text="${#messages.msg('umps.adminfunc.common.pagination.pageNo')}"></span>-->
-                            <!--<span>-->
-                                <!--<select id="numPager"></select>-->
-                            <!--</span>-->
-                        <!--</div>-->
+                    <!--<div style="flex: auto;"></div>-->
+                    <!--<div>-->
+                    <!--<span class="grid-page-header-text" th:text="${#messages.msg('umps.adminfunc.common.pagination.recordPerPage')}"></span>-->
+                    <!--<span>-->
+                    <!--<select id="totalPager"></select>-->
+                    <!--</span>-->
+                    <!--<span class="grid-page-header-text" style="padding-left: 10px;" th:text="${#messages.msg('umps.adminfunc.common.pagination.pageNo')}"></span>-->
+                    <!--<span>-->
+                    <!--<select id="numPager"></select>-->
+                    <!--</span>-->
+                    <!--</div>-->
                     <!--</div>-->
                     <div>
                         <div id="dataGrid"></div>
@@ -147,16 +162,16 @@
                 <div class="flex-container" style="padding-top: 30px;">
                     <div style="flex: auto;"></div>
                     <div>
-                        <a th:href="@{/SMARTICS-2/enquiry/appointmentBookingEnquiry.do}">
+                        <a th:href="@{/SMARTICS-2/enquiry/enquiryCodeInformation.do}">
                             <input class="SmallButtonStyle pointer" id="" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.backToSearchCriteria')}" />
                         </a>
                     </div>
-                    <div style="padding-left: 10px;">
-                        <a th:href="@{/SMARTICS-2/enquiry/appointmentBookingEnquiry.do}">
-                            <input class="SmallButtonStyle pointer" id="" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.backToPreviousPage')}" />
-                        </a>
-                    </div>
                 </div>
+
+                <div style="padding-top: 10px;">
+                    <div th:replace="fragments/appointment-booking-enquiry-footer::appointmentBookingEnquiryFooter" ></div>
+                </div>
+
             </div>
         </div>
     </div>
