ADD: Delete Appointment

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -194,7 +194,7 @@
                                     <div id="sub-content-2-2">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.maintenance.deleteappointment')}"></a>
+                                                <a th:href="@{/SMARTICS-2/maintenance/deleteAppointment.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.maintenance.deleteappointment')}"></a>
                                             </li>
                                         </ul>
                                     </div>
