ADD: Important Announcement FIX: Access Control Routing failure

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -126,7 +126,7 @@
                                     <div id="sub-content-1-2">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.importantannouncement')}"></a>
+                                                <a th:href="@{/e-Services-2/maintenance/importantAnnouncement.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.importantannouncement')}"></a>
                                             </li>
                                             <li class="func-child">
                                                 <a th:href="@{/e-Services-2/maintenance/surgeControl.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.surgecontrol')}"></a>
