--- a/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-create.html
+++ b/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-create.html
@@ -19,50 +19,58 @@
     <div layout:fragment="content">
         <div class="content-padding">
             <div>
-                <div>
-                    <b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.newScheduleJob')}"></span></b>
-                </div>
-                <div >
-                    <div class="RowSeparatorThin"></div>
-                    <div class="flex-container search-padding">
-                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.jobname')}"></span></b></div>
-                        <div class="flex-item-7">
-                            <input class="search-input" type="text" maxlength="10" size="10" />
-                        </div>
+                <form th:action="@{/e-Services-2/maintenance/scheduleJob_Success.do}" method="post">
+                    <div>
+                        <b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.newScheduleJob')}"></span></b>
                     </div>
-                    <div class="flex-container search-padding">
-                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.jobClass')}"></span></b></div>
-                        <div class="flex-item-7">
-                            <input class="search-input" type="text" maxlength="10" size="10" />
+                    <div >
+                        <div class="RowSeparatorThin"></div>
+                        <div class="flex-container search-padding">
+                            <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.jobname')}"></span></b></div>
+                            <div class="flex-item-7">
+                                <input class="search-input" type="text" maxlength="10" size="10" />
+                            </div>
                         </div>
-                    </div>
-                    <div class="flex-container search-padding">
-                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.cronexpression')}"></span></b></div>
-                        <div class="flex-item-7">
-                            <input class="search-input" type="text" maxlength="10" size="10" />
+                        <div class="flex-container search-padding">
+                            <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.jobClass')}"></span></b></div>
+                            <div class="flex-item-7">
+                                <input class="search-input" type="text" maxlength="10" size="10" />
+                            </div>
                         </div>
-                    </div>
-                    <div class="flex-container search-padding">
-                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.datamap')}"></span></b></div>
-                        <div class="flex-item-7">
-                            <input class="search-input" type="text" maxlength="10" size="10" />
+                        <div class="flex-container search-padding">
+                            <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.cronexpression')}"></span></b></div>
+                            <div class="flex-item-7">
+                                <input class="search-input" type="text" maxlength="10" size="10" />
+                            </div>
                         </div>
-                    </div>
+                        <div class="flex-container search-padding">
+                            <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.datamap')}"></span></b></div>
+                            <div class="flex-item-7">
+                                <input class="search-input" type="text" maxlength="10" size="10" />
+                            </div>
+                        </div>
+                        <div class="flex-container search-padding">
+                            <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.description')}"></span></b></div>
+                            <div class="flex-item-7">
+                                <input class="search-input" type="text" maxlength="10" size="10" />
+                            </div>
+                        </div>
 
-                    <div class="RowSeparatorThin"></div>
-                </div>
-                <div class="flex-container" style="padding-top: 30px;">
-                    <div style="flex: auto;"></div>
-                    <div style="padding: 15px;">
-                        <a class="DisableLinkUnderline" th:href="@{/e-Services-2/maintenance/scheduleJob_Success.do}">
-                            <input class="ButtonStyle button pointer" type="submit" th:value="${#messages.msg('umps.adminfunc.common.create')}" />
-                        </a>
-                        &nbsp;
-                        <a class="DisableLinkUnderline" th:href="@{/e-Services-2/maintenance/scheduleJob.do}">
-                            <input class="ButtonStyle button pointer" type="button" th:value="${#messages.msg('umps.adminfunc.common.cancel')}" />
-                        </a>
+                        <div class="RowSeparatorThin"></div>
                     </div>
-                </div>
+                    <div class="flex-container" style="padding-top: 30px;">
+                        <div style="flex: auto;"></div>
+                        <div style="padding: 15px;">
+                            <!--<a class="DisableLinkUnderline" th:href="@{/e-Services-2/maintenance/scheduleJob_Success.do}">-->
+                                <input class="ButtonStyle button pointer" type="submit" th:value="${#messages.msg('umps.adminfunc.common.create')}" />
+                            <!--</a>-->
+                            &nbsp;
+                            <a class="DisableLinkUnderline" th:href="@{/e-Services-2/maintenance/scheduleJob.do}">
+                                <input class="ButtonStyle button pointer" type="button" th:value="${#messages.msg('umps.adminfunc.common.cancel')}" />
+                            </a>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
