--- a/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-create.html
+++ b/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-create.html
@@ -28,31 +28,31 @@
                         <div class="flex-container search-padding">
                             <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.jobname')}"></span></b></div>
                             <div class="flex-item-7">
-                                <input class="search-input" type="text" maxlength="10" size="10" />
+                                <input class="search-input" name="jobName" type="text" maxlength="10" size="10" />
                             </div>
                         </div>
                         <div class="flex-container search-padding">
                             <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.jobClass')}"></span></b></div>
                             <div class="flex-item-7">
-                                <input class="search-input" type="text" maxlength="10" size="10" />
+                                <input class="search-input" name="jobClass" type="text" maxlength="10" size="10" />
                             </div>
                         </div>
                         <div class="flex-container search-padding">
                             <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.cronexpression')}"></span></b></div>
                             <div class="flex-item-7">
-                                <input class="search-input" type="text" maxlength="10" size="10" />
+                                <input class="search-input" name="cronExpression" type="text" maxlength="10" size="10" />
                             </div>
                         </div>
                         <div class="flex-container search-padding">
                             <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.datamap')}"></span></b></div>
                             <div class="flex-item-7">
-                                <input class="search-input" type="text" maxlength="10" size="10" />
+                                <input class="search-input" name="dataMap" type="text" maxlength="10" size="10" />
                             </div>
                         </div>
                         <div class="flex-container search-padding">
                             <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.search.field.description')}"></span></b></div>
                             <div class="flex-item-7">
-                                <input class="search-input" type="text" maxlength="10" size="10" />
+                                <input class="search-input" name="description" type="text" maxlength="10" size="10" />
                             </div>
                         </div>
 
