ADD: Function ID

--- a/src/main/resources/templates/eServices2/AccessControl/access-control.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control.html
@@ -10,6 +10,10 @@
         $(document).ready(function () {
             var list = [];
 
+            var accessControlDTO = [[${accessControlDTO}]];
+            console.log("accessControlDTO");
+            console.log(accessControlDTO);
+
             var accessControlList = [[${accessControlDTO.accessControlList}]];
 
             if (isNotEmptyNullUndfined(accessControlList) && accessControlList.length > 0) {
