MOD: remove demo account

--- a/src/main/resources/templates/Auth/login.html
+++ b/src/main/resources/templates/Auth/login.html
@@ -97,7 +97,7 @@
                     <b>User ID :</b>
                 </div>
                 <div class="flex-item-2 field-name content-user-id-right">
-                    <input id="loginId" name="loginId" value="demo001"/>
+                    <input id="loginId" name="loginId" />
                     <!--SCUSER08-->
                 </div>
             </div>
