--- a/src/main/resources/templates/Auth/login-form.html
+++ b/src/main/resources/templates/Auth/login-form.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="flex-item-2 field-name content-user-id-right">
                     <!--<input id="loginId" name="user.userId" value=""/>-->
-                    <input id="loginId" name="user.userId" value="demo001"/>
+                    <input id="loginId" name="user.userId"/>
                     <!--SCUSER08-->
                     <!--demo001-->
                 </div>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="flex-item-2 field-name content-password-right">
                     <!--<input id="password" name="user.password" type="password" value=""/>-->
-                    <input id="password" name="user.password" type="password" value="A123456"/>
+                    <input id="password" name="user.password" type="password"/>
                 </div>
             </div>
             <div class="flex-container">
